test: open java.net module to allow reset of URL URLStreamHandlerFactory (#14271)
URL.setURLStreamHandlerFactory() can be invoked only once per JVM,
otherwise it throws an exception.
To support more tests in the same module using that method, URL.factory
private field should be nullified with reflection, but this fails with
Java 17 with java.lang.reflect.InaccessibleObjectException exception.
To make reflection work, this change add '--add-opens' flag to maven
surefire plugin configuration.